--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,7 @@
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -61,7 +62,245 @@
 <body id="page-top">
 
   <!--/ Nav Star /-->
-    <h1 class="jumbotron text-center">Site can't be available at the moment</h1>
+    <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll" href="home">
+        <img src="img/logo.png" alt="The King's Church" width="50" height="50">
+      </a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="about">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#">Messages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll active" href="#">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--/ Nav End /-->
+
+  <!--/ Intro Skew Star /-->
+  <div id="home" class="intro route bg-image" style="background-image: url(img/bg-1.jpg)">
+    <div class="overlay-itro"></div>
+    <div class="intro-content display-table">
+      <div class="table-cell">
+        <div class="container">
+          <!--<p class="display-6 color-d">Hello, world!</p>-->
+          <h1 class="intro-title mb-4 mt-8">The King's Church</h1>
+          <p class="intro-subtitle">
+            <span class="text-slider-items">Bringing Many Sons Unto Glory</span>
+            <strong class="text-slider"></strong>
+          </p>
+          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--/ Intro Skew End /-->
+
+  <!-- Gallery -->
+  <section id="work" class="portfolio-mf sect-pt4 route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="title-box text-center">
+            <h3 class="title-a">
+              GALLERY
+            </h3>
+            <!-- <p class="subtitle-a">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p> -->
+            <div class="line-mf"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/tkc-img/FB_IMG_1491859722396.jpg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/tkc-img/FB_IMG_1491859722396.jpg" alt="The King's Church" class="img-fluid">
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/tkc-img/Screenshot_2018-12-27-10-31-22-1.png" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/tkc-img/Screenshot_2018-12-27-10-31-22-1.png" alt="The King's Church" class="img-fluid">
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/tkc-img/IMG_20190101_104756_451.jpg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/tkc-img/IMG_20190101_104756_451.jpg" alt="The King's Church" class="img-fluid">
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto">
+          <div class="work-box">
+            <a href="img/tkc-img/IMG_20190428_180317_574.jpg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/tkc-img/IMG_20190428_180317_574.jpg" alt="The King's Church" class="img-fluid">
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--/ Section Contact-Footer Star /-->
+  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/background-2.jpg)">
+    <div class="overlay-mf"></div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="contact-mf">
+            <div id="contact" class="box-shadow-full">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="title-box-2">
+                    <h5 class="title-left">
+                      Get In Touch
+                    </h5>
+                  </div>
+                  <div>
+                      <form action="" method="post" role="form" class="contactForm">
+                      <div id="sendmessage">Your message has been sent. Thank you!</div>
+                      <div id="errormessage"></div>
+                      <div class="row">
+                        <div class="col-md-12 mb-3">
+                          <div class="form-group">
+                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                            <div class="validation"></div>
+                          </div>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                          <div class="form-group">
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                            <div class="validation"></div>
+                          </div>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <div class="form-group">
+                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                              <div class="validation"></div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                          <div class="form-group">
+                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                            <div class="validation"></div>
+                          </div>
+                        </div>
+                        <div class="col-md-12">
+                          <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="title-box-2 pt-4 pt-md-0">
+                    <h5 class="title-left">
+                      Contact Us
+                    </h5>
+                  </div>
+                  <div class="more-info">
+                    <p class="lead">
+                      We're always available. We would love to hear from you.
+                    </p>
+                    <ul class="list-ico">
+                      <li><span class="ion-ios-location"></span> Hardunni Banquet Hall. Ayeni 1010 Close, Sheraton-Opebi Link Road. Ikeja</li>
+                      <li><span class="ion-ios-telephone"></span> 
+                        <a href="tel:08098256329">0809 825 6329&nbsp;&nbsp;&nbsp;&nbsp;</a>  
+                        <a href="tel:08120921658">0812 092 1658</a>
+                      </li>
+                      <li><span class="ion-email"></span> 
+                        <a href="mailto:thekingschurch2016@gmail.com">thekingschurch2016@gmail.com</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="socials">
+                    <ul>
+                      <li>
+                        <a href="https://www.facebook.com/The-Kings-Church-426057771213400/">
+                          <span class="ico-circle"><i class="ion-social-facebook"></i></span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://instagram.com/Thekingschurch">
+                          <span class="ico-circle"><i class="fa fa-instagram"></i></span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://twitter.com/Thekingschurch3">
+                          <span class="ico-circle"><i class="ion-social-twitter"></i></span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div><hr>
+                  <div class="footer-copyright text-center mt-4">
+                    Copyright &copy; <span id="year"></span> All rights reserved. Website Crafted with 
+                    <i class="fa fa-heart-o" aria-hidden="true"></i> by 
+                    <a href="https://eben.com.ng" style="color: #61118a" title="Ebenezer Oladutemu" target="_blank"><b>Eben</b></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <!--/ Section Contact-footer End /-->
+
+  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <!-- <div id="preloader"></div> -->
+
+  <!-- JavaScript Libraries -->
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <script src="lib/popper/popper.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/counterup/jquery.waypoints.min.js"></script>
+  <script src="lib/counterup/jquery.counterup.js"></script>
+  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="lib/lightbox/js/lightbox.min.js"></script>
+  <script src="lib/typed/typed.min.js"></script>
+  <!-- Contact Form JavaScript File -->
+  <script src="contactform/contactform.js"></script>
+
+  <!-- Template Main Javascript File -->
+  <script src="js/main.js"></script>
+  <script src="js/vue.min.js"></script>
+  <script src="js/tkc-scripts.js"></script>
+
     
 </body>
 </html>
